refactor: article converter분리