@@ -1,4 +1,5 @@
 package com.draconist.goodluckynews.domain.article.service;
+import com.draconist.goodluckynews.domain.article.converter.ArticleConverter;
 import com.draconist.goodluckynews.domain.article.dto.*;
 import com.draconist.goodluckynews.domain.article.entity.ArticleEntity;
 import com.draconist.goodluckynews.domain.article.entity.Heart;
@@ -32,6 +33,7 @@ public class ArticleService {
     private final ArticleRepository articleRepository;
     private final HeartRepository heartRepository;
     private final CompletedTimeRepository completedTimeRepository;
+    private final ArticleConverter articleConverter;
 
     @Transactional
     public ResponseEntity<?> saveArticles(Long userId, List<ArticleDto> articleDtos) {
@@ -39,40 +41,19 @@ public class ArticleService {
         Member member = memberRepository.findById(userId)
                 .orElseThrow(() -> new GeneralException(ErrorStatus.MEMBER_NOT_FOUND));
 
-        // 각 ArticleDto를 ArticleEntity로 변환하여 저장
-        for (ArticleDto articleDto : articleDtos) {
-            String title = articleDto.getTitle();
-            String content = articleDto.getContent();
-
-            // 400 : 제목이 비어있는 경우
-            if (title == null || title.isBlank()) {
+        for (ArticleDto dto : articleDtos) {
+            if (dto.getTitle() == null || dto.getTitle().isBlank()) {
                 return ResponseEntity.status(400)
                         .body(ApiResponse.onFailure(ErrorStatus._ARTICLE_TITLE_MISSING, null));
             }
-
-            // 400 : 내용이 비어있는 경우
-            if (content == null || content.isBlank()) {
+            if (dto.getContent() == null || dto.getContent().isBlank()) {
                 return ResponseEntity.status(400)
                         .body(ApiResponse.onFailure(ErrorStatus._ARTICLE_CONTENT_MISSING, null));
             }
-
-            // Article 생성
-            ArticleEntity article = ArticleEntity.builder()
-                    .userId(member.getId())
-                    .title(title)
-                    .content(content)
-                    .image(articleDto.getImage())
-                    .longContent(articleDto.getLongContent())
-                    .originalLink(articleDto.getOriginalLink())
-                    .keywords(articleDto.getKeywords()) // ArticleDto의 keywords를 사용
-                    .originalDate(articleDto.getOriginalDate())
-                    .build();
-
-            // DB에 기사 저장
-            articleRepository.save(article);
+            ArticleEntity entity = articleConverter.toEntity(dto, member.getId());
+            articleRepository.save(entity);
         }
 
-        // 201 : 기사 생성 성공
         return ResponseEntity.status(201).body(ApiResponse.onSuccess("기사들이 생성되었습니다."));
     }
 
@@ -95,11 +76,9 @@ public class ArticleService {
                     .body(ApiResponse.onFailure(ErrorStatus._ARTICLE_NOT_FOUND, null));
         }
         // 랜덤 게시글 정보 빌드 (response.result)
-        ArticleListDto randomArticleDto = buildArticleListResponse(randomArticle, userId);
+        ArticleListDto dto = articleConverter.toArticleListDto(randomArticle, userId);
 
-        // 응답 반환
-        return ResponseEntity.status(HttpStatus.OK)
-                .body(ApiResponse.onSuccess(randomArticleDto));
+        return ResponseEntity.status(HttpStatus.OK).body(ApiResponse.onSuccess(dto));
     }
 
 
@@ -114,14 +93,12 @@ public class ArticleService {
         // DB 검색 - 나의 게시글 조회(최신순)
         Page<ArticleEntity> articlePage = articleRepository.findAll(pageRequest);
         // 게시글 정보 빌드 (response.result)
-        List<ArticleZipListDto> responseDtos = new ArrayList<>();
-        for (ArticleEntity article : articlePage.getContent()) {
-            ArticleZipListDto responseDto = buildArticleZipListResponse(userId,article);
-            responseDtos.add(responseDto);
-        }
-        // 응답 반환
-        return ResponseEntity.status(HttpStatus.OK)
-                .body(ApiResponse.onSuccess(responseDtos));
+        List<ArticleZipListDto> responseDtos = articlePage
+                .stream()
+                .map(article -> articleConverter.toArticleZipListDto(article, userId))
+                .toList();
+
+        return ResponseEntity.ok(ApiResponse.onSuccess(responseDtos));
     }
 
     //상세보기
@@ -133,10 +110,9 @@ public class ArticleService {
         //Article 찾기
         ArticleEntity article = articleRepository.findById(articleId)
                 .orElseThrow(() -> new GeneralException(ErrorStatus._ARTICLE_NOT_FOUND));
-        ArticleLongContentDto responseDto = buildArticleLongContentDto(article,userId);
 
-        return ResponseEntity.status(HttpStatus.OK)
-                .body(ApiResponse.onSuccess(responseDto));
+        ArticleLongContentDto dto = articleConverter.toArticleLongContentDto(article, userId);
+        return ResponseEntity.ok(ApiResponse.onSuccess(dto));
 
     }
 
@@ -155,13 +131,12 @@ public class ArticleService {
 
         // 게시글 정보 빌드 (response.result)
         // 응답 DTO 변환
-        List<ArticleZipListDto> responseDtos = pagedArticles.stream()
-                .map(article -> buildArticleZipListResponse(userId, article))
+        List<ArticleZipListDto> dtoList = bookmarkedArticles.subList(start, end)
+                .stream()
+                .map(a -> articleConverter.toArticleZipListDto(a, userId))
                 .toList();
 
-        // 응답 반환
-        return ResponseEntity.status(HttpStatus.OK)
-                .body(ApiResponse.onSuccess(responseDtos));
+        return ResponseEntity.ok(ApiResponse.onSuccess(dtoList));
     }
 
 
@@ -170,90 +145,17 @@ public class ArticleService {
         Pageable pageable = PageRequest.of(page, size);
         Page<ArticleEntity> articlePage = articleRepository.searchArticles(searchQuery, pageable);
 
-        // ArticleZipListDto로 변환 (builder 활용)
-        List<ArticleZipListDto> responseDtos = articlePage.stream()
-                .map(article -> buildArticleZipListResponse(userId, article))
-                .collect(Collectors.toList());
+        // ArticleZipListDto로 변환
+        List<ArticleZipListDto> dtoList = articlePage
+                .stream()
+                .map(a -> articleConverter.toArticleZipListDto(a, userId))
+                .toList();
 
         // 응답 반환
-        return ResponseEntity.status(HttpStatus.OK)
-                .body(ApiResponse.onSuccess(responseDtos));
+        return ResponseEntity.ok(ApiResponse.onSuccess(dtoList));
     }
 
-    //빌드 편의 메소드 converter
-    private ArticleListDto buildArticleListResponse(ArticleEntity article, Long userId) {
-        Heart heart = heartRepository.findByMemberIdAndArticleId(userId, article.getId())
-                .orElse(null);
-        boolean isBookmarked = heart != null && heart.isBookmarked(); // 북마크 여부 확인
-        CompletedDegreeDto completedDegreeDto = completedTimeRepository
-                .findByMemberIdAndArticleId(userId, article.getId())
-                .map(completedTime -> new CompletedDegreeDto(completedTime.getDegree(), completedTime.getCompletedAt()))
-                .orElse(null); // 만약 없으면 null
 
-        // ArticleListDto 빌드
-        return ArticleListDto.builder()
-                .id(article.getId())  // ArticleEntity의 id를 ArticleListDto로 매핑
-                .title(article.getTitle())  // Title 매핑
-                .content(article.getContent())  // Content 매핑
-                .degree(completedDegreeDto != null ? completedDegreeDto.getDegree() : null)
-                .completedTime(completedDegreeDto != null ? completedDegreeDto.getCompletedTime() : null)
-                .longContent(article.getLongContent())
-                .originalLink(article.getOriginalLink())
-                .image(article.getImage())  // 이미지 URL을 하나로 매핑
-                .keywords(article.getKeywords())  // 키워드 매핑
-                .originalDate(article.getOriginalDate())
-                .userId(article.getUserId())  // 작성자 ID
-                .likeCount(article.getLikeCount())
-                .bookmarked(isBookmarked)
-                .build();
-    }
-    private ArticleZipListDto buildArticleZipListResponse(Long userId,ArticleEntity article) {
-        Heart heart = heartRepository.findByMemberIdAndArticleId(userId, article.getId())
-                .orElse(null);
-        boolean isBookmarked = heart != null && heart.isBookmarked(); // 북마크 여부 확인
-        CompletedDegreeDto completedDegreeDto = completedTimeRepository
-                .findByMemberIdAndArticleId(userId, article.getId())
-                .map(completedTime -> new CompletedDegreeDto(completedTime.getDegree(), completedTime.getCompletedAt()))
-                .orElse(null); // 만약 없으면 null
-
-        // ArticleListDto 빌드
-        return ArticleZipListDto.builder()
-                .id(article.getId())  // ArticleEntity의 id를 ArticleListDto로 매핑
-                .title(article.getTitle())  // Title 매핑
-                .content(article.getContent())  // Content 매핑
-                .degree(completedDegreeDto != null ? completedDegreeDto.getDegree() : null)
-                .completedTime(completedDegreeDto != null ? completedDegreeDto.getCompletedTime() : null)
-                .image(article.getImage())  // 이미지 URL을 하나로 매핑
-                .keywords(article.getKeywords())  // 키워드 매핑
-                .originalDate(article.getOriginalDate())
-                .likeCount(article.getLikeCount())
-                .bookmarked(isBookmarked)
-                .build();
-    }
-
-    private ArticleLongContentDto buildArticleLongContentDto(ArticleEntity article, Long userId) {
-        Heart heart = heartRepository.findByMemberIdAndArticleId(userId, article.getId())
-                .orElse(null);
-        boolean isBookmarked = heart != null && heart.isBookmarked(); // 북마크 여부 확인
-        CompletedDegreeDto completedDegreeDto = completedTimeRepository
-                .findByMemberIdAndArticleId(userId, article.getId())
-                .map(completedTime -> new CompletedDegreeDto(completedTime.getDegree(), completedTime.getCompletedAt()))
-                .orElse(null); // 만약 없으면 null
-
-        return ArticleLongContentDto.builder()
-                .id(article.getId())
-                .title(article.getTitle())
-                .longContent(article.getLongContent())
-                .originalLink(article.getOriginalLink())
-                .image(article.getImage())
-                .keywords(article.getKeywords())
-                .degree(completedDegreeDto != null ? completedDegreeDto.getDegree() : null)
-                .completedTime(completedDegreeDto != null ? completedDegreeDto.getCompletedTime() : null)
-                .originalDate(article.getOriginalDate())
-                .likeCount(article.getLikeCount())
-                .bookmarked(isBookmarked)
-                .build();
-    }
 
 
 }
